--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
 .DS_Store
-/.build
+.build
+.swiftpm
+.netrc
 /Packages
 xcuserdata/
 DerivedData/
-.swiftpm/configuration/registries.json
-.swiftpm/xcode/package.xcworkspace/contents.xcworkspacedata
-.netrc
